force-app/main/default/objects/PDE__c/fields/ReferencePointEnergie_Refonte__c.field-meta.xml
<CustomField>
    <fullName>ReferencePointEnergie_Refonte__c</fullName>
    <label>Référence point d&apos;énergie</label>
    <length>16</length>
    <type>Text</type>
</CustomField>