force-app/main/default/objects/PDE__c/fields/Renouvellement_OK_Ann_e_en_cours__c.field-meta.xml
<CustomField>
    <fullName>Renouvellement_OK_Ann_e_en_cours__c</fullName>
    <description>Cette formule ne fonctionne que pour l&apos;année en cours</description>
    <formula>AND(
  YEAR(Ancienne_date_echeance__c) = YEAR(TODAY()),
  YEAR(DateEcheance__c) &gt; YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renouvellement OK Année en cours</label>
    <type>Checkbox</type>
</CustomField>