force-app/main/default/objects/PDE__c/fields/ResultatCalculPsMax__c.field-meta.xml
<CustomField>
    <fullName>ResultatCalculPsMax__c</fullName>
    <label>Résultat calcul des PS Max</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>