force-app/main/default/objects/PDE__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>ELEC</description>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C5</fullName>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>T1</fullName>
            </value>
            <value>
                <fullName>T2</fullName>
            </value>
            <value>
                <fullName>T3</fullName>
            </value>
            <value>
                <fullName>T4</fullName>
            </value>
            <value>
                <fullName>Aucun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>