force-app/main/default/objects/PDE__c/fields/SignataireACD__c.field-meta.xml
<CustomField>
    <fullName>SignataireACD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signataire ACD</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Points d&apos;énergie (Signataire ACD)</relationshipLabel>
    <relationshipName>PointEnergies</relationshipName>
    <type>Lookup</type>
</CustomField>