force-app/main/default/objects/PDE__c/fields/Siret_payeur__c.field-meta.xml
<CustomField>
    <fullName>Siret_payeur__c</fullName>
    <label>Siret payeur</label>
    <length>14</length>
    <type>Text</type>
</CustomField>