force-app/main/default/objects/PDE__c/fields/SiteConsommation__c.field-meta.xml
<CustomField>
    <fullName>SiteConsommation__c</fullName>
    <label>Site de Consommation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>