force-app/main/default/objects/PDE__c/fields/Taux_puissance_souscrite__c.field-meta.xml
<CustomField>
    <fullName>Taux_puissance_souscrite__c</fullName>
    <formula>IF(
    Puissance_souscrite__c = 0,
    0,
    (PSMaxActive__c / Puissance_souscrite__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taux puissance souscrite</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>