force-app/main/default/objects/PDE__c/fields/TaxeCTAActuel__c.field-meta.xml
<CustomField>
    <fullName>TaxeCTAActuel__c</fullName>
    <label>Taxe CTA Actuel (€HT/an)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>