force-app/main/default/objects/PDE__c/fields/TECH_AA_OwnerName__c.field-meta.xml
<CustomField>
    <fullName>TECH_AA_OwnerName__c</fullName>
    <label>TECH_AA_OwnerName</label>
    <length>18</length>
    <type>Text</type>
</CustomField>