force-app/main/default/objects/PDE__c/fields/TECH_C5_4Postes__c.field-meta.xml
<CustomField>
    <fullName>TECH_C5_4Postes__c</fullName>
    <formula>OR(TEXT(FTA__c)=&apos;BT &lt;= 36Kva - CU 4 postes&apos;,TEXT(FTA__c)=&apos;BT &lt;= 36Kva - MU 4 postes&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_C5_4Postes</label>
    <type>Checkbox</type>
</CustomField>