force-app/main/default/objects/PDE__c/fields/TECH_CAR__c.field-meta.xml
<CustomField>
    <fullName>TECH_CAR__c</fullName>
    <formula>IF( NOT(ISBLANK(Consommation_Annuelle_de_R_f_rence_Elec__c)) , Consommation_Annuelle_de_R_f_rence_Elec__c, CARGaz__c)</formula>
    <label>CAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>