force-app/main/default/objects/PDE__c/fields/TECH_MU_CU__c.field-meta.xml
<CustomField>
    <fullName>TECH_MU_CU__c</fullName>
    <formula>IF(CONTAINS(TEXT(FTA__c),&quot;CU&quot;),&quot;CU&quot;,
IF(CONTAINS(TEXT(FTA__c),&quot;MU&quot;),&quot;MU&quot;,
null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_MU_CU</label>
    <type>Text</type>
</CustomField>