force-app/main/default/objects/PDE__c/fields/TECH_num_compteur__c.field-meta.xml
<CustomField>
    <fullName>TECH_num_compteur__c</fullName>
    <formula>IF( NOT(ISBLANK(PCE_Refonte__c)) , PCE_Refonte__c, ReferencePointEnergie_Refonte__c)</formula>
    <label>Numéro de compteur</label>
    <type>Text</type>
</CustomField>