force-app/main/default/objects/PDE__c/fields/TECH_OptimisationFieldsMissing__c.field-meta.xml
<CustomField>
    <fullName>TECH_OptimisationFieldsMissing__c</fullName>
    <formula>OR(
    ISBLANK(HCEActuel__c),
    ISBLANK(HPEActuel__c),
    ISBLANK(HCHActuel__c),
    ISBLANK(HPHActuel__c),
    ISBLANK(POINTEActuel__c),

    ISBLANK(HCEOptimal__c),
    ISBLANK(HPEOptimal__c),
    ISBLANK(HCHOptimal__c),
    ISBLANK(HPHOptimal__c),
    ISBLANK(POINTEOptimal__c),

    ISBLANK(PartFixeCSActuel__c),
    ISBLANK(PartVariableCSActuel__c),
    ISBLANK(DepassementActuel__c),
    ISBLANK(TaxeCTAActuel__c),

    ISBLANK(PartFixeCSOptimal__c),
    ISBLANK(PartVariableCSOptimal__c),
    ISBLANK(DepassementOptimal__c),
    ISBLANK(TaxeCTAOptimal__c),

    ISBLANK(BudgetTotalActuel__c),
    ISBLANK(BudgetTotalOptimal__c),

    ISBLANK(EconomieIdentifie__c)
)</formula>
    <label>TECH Champ Optimisation manquant ?</label>
    <type>Checkbox</type>
</CustomField>