force-app/main/default/objects/PDE__c/fields/TECH_RTName__c.field-meta.xml
<CustomField>
    <fullName>TECH_RTName__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_RTName</label>
    <type>Text</type>
</CustomField>