force-app/main/default/objects/PDE__c/fields/TECH_SelectedPDE__c.field-meta.xml
<CustomField>
    <fullName>TECH_SelectedPDE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champs technique permettant de selectionner le PDE lors du renouvellement d&apos;une ACD</description>
    <label>TECH_SelectedPDE</label>
    <type>Checkbox</type>
</CustomField>