force-app/main/default/objects/PDE__c/fields/TECH_Short_FTA__c.field-meta.xml
<CustomField>
    <fullName>TECH_Short_FTA__c</fullName>
    <formula>IF(CONTAINS(TEXT(FTA__c), &apos;4 postes&apos;),RIGHT(TEXT(FTA__c), 11) ,RIGHT(TEXT(FTA__c), 2))</formula>
    <label>TECH Short FTA</label>
    <type>Text</type>
</CustomField>