force-app/main/default/objects/PDE__c/fields/TECH_Syndic__c.field-meta.xml
<CustomField>
    <fullName>TECH_Syndic__c</fullName>
    <description>Id du Syndic s&apos;il existe, permettant aux flow d&apos;éviter de boucler et de faire sauter la limite des 2000 éléments.</description>
    <formula>CASESAFEID(EntiteJuridique__r.Syndic__c)</formula>
    <label>TECH Syndic</label>
    <type>Text</type>
</CustomField>