force-app/main/default/objects/PDE__c/fields/TypePDE__c.field-meta.xml
<CustomField>
    <fullName>TypePDE__c</fullName>
    <formula>IF(OR(RecordType.DeveloperName=&apos;Elec_C1C2&apos;,RecordType.DeveloperName=&apos;PDE_ElecC5&apos;,
RecordType.DeveloperName=&apos;Elec_C3_C4&apos;), TEXT(Segment__c) ,
IF(RecordType.DeveloperName=&apos;PDE_Gaz&apos;,&apos;Gaz&apos;,null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type PDE</label>
    <type>Text</type>
</CustomField>