force-app/main/default/objects/PDE__c/fields/voie__c.field-meta.xml
<CustomField>
    <fullName>voie__c</fullName>
    <label>Voie</label>
    <length>155</length>
    <type>Text</type>
</CustomField>