force-app/main/default/objects/PDE__c/fields/X12_mois_consommation_SGE__c.field-meta.xml
<CustomField>
    <fullName>X12_mois_consommation_SGE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>12 mois de consommation sur SGE</label>
    <type>Checkbox</type>
</CustomField>