force-app/main/default/objects/PDE__c/recordTypes/Elec_C1C2.recordType-meta.xml
<RecordType>
    <fullName>Elec_C1C2</fullName>
    <active>true</active>
    <description>Point d&apos;énergie de C1 à C2</description>
    <label>Elec C1 à C2</label>
</RecordType>