force-app/main/default/objects/PDE__c/recordTypes/Elec_C1C4.recordType-meta.xml
<RecordType>
    <fullName>Elec_C1C4</fullName>
    <active>false</active>
    <description>Point d&apos;énergie de C1 à C4</description>
    <label>Elec C1 à C4</label>
</RecordType>