force-app/main/default/objects/PDE__c/recordTypes/Elec_C3_C4.recordType-meta.xml
<RecordType>
    <fullName>Elec_C3_C4</fullName>
    <active>true</active>
    <description>Point d&apos;énergie de C3 à C4</description>
    <label>Elec C3 à C4</label>
</RecordType>