force-app/main/default/objects/PDE__c/recordTypes/PDE_ElecC5.recordType-meta.xml
<RecordType>
    <fullName>PDE_ElecC5</fullName>
    <active>true</active>
    <description>Point d&apos;énergie C5</description>
    <label>Elec C5</label>
</RecordType>