force-app/main/default/objects/PDE__c/recordTypes/PDE_Gaz.recordType-meta.xml
<RecordType>
    <fullName>PDE_Gaz</fullName>
    <active>true</active>
    <label>Gaz</label>
</RecordType>