force-app/main/default/objects/PDE__c/validationRules/VF_001.validationRule-meta.xml
<ValidationRule>
    <fullName>VF_001</fullName>
    <active>true</active>
    <description>Date de signature de l&apos;ACD supérieur à aujourd&apos;hui</description>
    <errorConditionFormula>Date_signature_ACD__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_signature_ACD__c</errorDisplayField>
    <errorMessage>Attention, votre date de signature de l&apos;ACD est dans le future</errorMessage>
</ValidationRule>