force-app/main/default/objects/PDE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>TECH_PDE_Conforme__c</columns>
    <columns>NAME</columns>
    <columns>EntiteJuridique__c</columns>
    <columns>Puissance_souscrite__c</columns>
    <columns>ReferencePointEnergie_Refonte__c</columns>
    <columns>Siret_payeur__c</columns>
    <columns>DateEcheance__c</columns>
    <columns>PCE_Refonte__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Tout les Points d&apos;énergie</label>
</ListView>