force-app/main/default/objects/PDE__c/listViews/PDE_Elec.listView-meta.xml
<ListView>
    <fullName>PDE_Elec</fullName>
    <columns>NAME</columns>
    <columns>DateEcheance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PDE__c.PDE_ElecC5</value>
    </filters>
    <label>Points d&apos;énergie C5</label>
</ListView>