force-app/main/default/objects/PDE__c/listViews/PDE_Gaz.listView-meta.xml
<ListView>
    <fullName>PDE_Gaz</fullName>
    <columns>NAME</columns>
    <columns>EntiteJuridique__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PDE__c.PDE_Gaz</value>
    </filters>
    <label>PDE Gaz</label>
</ListView>